Fixed styling for overflow-y

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -71,7 +71,7 @@ h1 {
 }
 
 .linksContainer {
-  width: 500px;
+  width: 100%;
   margin: auto;
   margin-top: 10px;
   height: 700px;
@@ -80,6 +80,8 @@ h1 {
 }
 
 .linkContainer {
+  width: 500px;
+  margin: auto;
   padding: 10px;
   border-bottom: 1px solid lightgrey;
 }
